fix, varagh & messenger message conflict(z-index)

--- a/src/FunPro/HomeBundle/Resources/public/css/deck.css
+++ b/src/FunPro/HomeBundle/Resources/public/css/deck.css
@@ -70,9 +70,9 @@ a.disabled {
     left: 0px;
 }
 
-.varagh {
-    z-index: 1;
-}
+/*.varagh {*/
+    /*z-index: 1;*/
+/*}*/
 
 #chat-room-container {
     z-index: 0;
